# ZeroW

./: .gitignore  Awareness-Campaign-July-August.xlsx  Mackay Notes.docx  OG presentation.pptx  README.md  Termination letter Leisa.docx  ZeroW Sunshine Coast.docx  bank_statement_analysis.ipynb  member snapshot 9 june.docx  new client onboarding process.drawio  operational_excellence.md  pyproject.toml  roles_job_descriptions.md  wales_members.csv
documents/: Brisbane Spreadsheet.xlsx  TEMPLATE.docx  wales notes.docx
draft documentation/: Notes from Discussions with Owners.docx  QR Scan to set up customer invoicing.docx  Sandra onboarding process.docx  ZeroW Credit Card Acquittal form.xlsx  ZeroW Credit Card Reconciliation Process.docx  ZeroW Gym Manager Job Description.docx  ZeroW Operations Manual 2023 Updated.dotx  ZeroW Strength Coach Job Description.docx  ZeroW Termination Procedure.docx  ZeroW Vision Mission & Values.docx  ZeroW client onboarding process.docx  ZeroW operations manual.docx  ZeroW staff onboarding procedure.docx  ZeroW the perfect weight tree.docx  ZeroW vision mission and values.docx  ZeroW_Template.docx  ZeroW_client_on-boarding_process.docx  ZeroW_procedure_template.docx  ZeroW_vision_mission_and_values.docx  checked Alcohol and Drugs.docx  checked Code of Conduct.docx  checked Discipline and Termination Policy.docx  checked Grievance Handling Policy.docx  checked Social Media Policy.docx  checked Workplace Anti-Bullying and Anti-Harrassment Policy.docx
images/: corporate_structure.drawio
resources/: IMG_3526 2.HEIC  IMG_3526.HEIC  (+5 more)
(+63 files in other folders)
