[tool.poetry]
name = "zerow"
version = "0.1.0"
description = ""
authors = ["Michael Kingston <mkingo@mac.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
