[tool.poetry]
name = "zerow"
version = "0.1.0"
description = ""
authors = ["Michael Kingston <mkingo@mac.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
pandas = "^2.2.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
dash = "^2.17.1"
python-dotenv = "^1.0.1"
xlsxwriter = "^3.2.0"
selenium = "^4.23.1"
rapidfuzz = "^3.9.6"
openpyxl = "^3.1.5"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
